--- a/Practice_project/bin/.gitignore
+++ b/Practice_project/bin/.gitignore
@@ -1,5 +1,1 @@
-/longestestincreasingsequence/
-/practice_project_1/
-/practice_project_2/
-/practice_project_3/
-/practice_project_4/
+/Practice_project_5/
