--- a/mavenproject/pom.xml
+++ b/mavenproject/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.savitha</groupId>
-  <artifactId>AddProductUsingHibernate</artifactId>
+  <groupId>com.java</groupId>
+  <artifactId>ProductDetails</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>AddProductUsingHibernate Maven Webapp</name>
+  <name>ProductDetails Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -43,7 +43,7 @@
   </dependencies>
 
   <build>
-    <finalName>AddProductUsingHibernate</finalName>
+    <finalName>ProductDetails</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
