--- a/Practice_project/bin/.gitignore
+++ b/Practice_project/bin/.gitignore
@@ -1,5 +1,6 @@
-/Practice_project_5/
-/Assessment_1.class
 /Assessment_1/
-/Vu.class
-/movie_ticket/
+/Practice_project_5/
+/practice_project_1/
+/practice_project_2/
+/practice_project_3/
+/practice_project_4/
